--- a/eCustoms/RMReceivingForm.resx
+++ b/eCustoms/RMReceivingForm.resx
@@ -118,16 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnAdjust.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bnDownloadToEXCEL.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAX1JREFUOE9joAnYHuz8f7OVERhv87WD01Bp3OByRej/LY6m/7+unvL/z+UNKPj7
-        5ulgOZAaqHJUAJIA2fJz3xwM/PvsWjD+e30dWA1WQ44q8/z/umwiHH+aXofKXjkJjEEGgtRCtUEAyNQt
-        dsb/P06oRuCJNQiMJn4uSBM1TEAmnnGS/f++MeP/h7as/x87s5FwDhiDxEHyIPwqUBfVFSDOSTOR/+8r
-        wv9/qI38/7EpCgO/r44Hy7/NDfx/3VQY04AbdmL/38Wr/P9Q4v7/U60XVgySexMiD1aLYQDIXyAD3qdq
-        /P9YZPL/U6XV/881tmAMYn/I0AbLgwzA8AIo4YDCAKQIrLHF5//XLgRGNuRtlCLYuyA9UO0QADIRFL/f
-        p0X8/zYr6f/zRcVg/GNFIRiDxEHeeJtohBmNIADSDEqyIE2glPh7X8//3wcmgekXq6rB+NncfLAavKkR
-        pACkEJb6QBiUeK40RuLXjAxA/gM5E6QBhEFsDD9TBzAwAABDnLe0Mc/ukgAAAABJRU5ErkJggg==
+        wwAADsMBx2+oZAAAAfpJREFUOE9tk90r63Ecx3/lr1DHpQu5OEhJKdwssZSTJnnIMyEdwim7QWklTqc8
+        lKdyIWopUrjgxpVbV/J0yENsZmZms43tzfvDd9vP/H692/r2e78+j1/t3/YAhtfNGFrpQb/1N8yLbeid
+        b0TnTDVaJ8vQ9LcUtRajqLLfAFNfnqioK1uk0by2bxUt7c2JZnfHI5rYHMbXICqQDqCe8PsbCofwEnpF
+        8CUAf9APX9CHp8AT3M9uuHwuOL1OyVIApBIQDn8Y48yBeLPD44gCmA7TJqBjtRkty/WiqmmTmD1+D8oH
+        TTrZH+3SI0N7BjTWQsDre1TjZKFkY97qElWPFYiB4PKFUmRa0pHQkoDrh+sogKmwWSptw1iuALs32tFg
+        rUCBJT/OfOW6kgnlN6ZCI4kAmtksb8ArH/OMAJoZSZkv7y9w7jyPAviHo1JmqfkzIsfHMlhaVmUy6qdq
+        RGd3Z3LOM42Lwg9Vp2nuWauT36Q/PzC0Y9ZBRq0D+H97EgVww7gLKvLPklSdCGE/YiHHsQCuJ3chdsYc
+        k81tk2Yx4lfokf0IppEcpP1Kgsa95i5EzO7bSKfZMNZ76jiVqBTNBzcHegB3gWZG/c7Mmmk+tB2KmSoe
+        yUSKMREa11HdQHUL1U2kWKsSo1I06wBKnLcSZ6zEZikxbaUUYyLeAA1mvQv7pYF1AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnBrowse.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -138,6 +140,18 @@
         nE9pYIxsEAjjNQRmQM87v/8TP4SBMcygeZ8ywQZt/NZG2IDWN85gQ0C4730g2EUgDDIEp2YQgBkAcur6
         zy3/N3/p+r/96wQwG2QQXs0gADIAPfoef7v1/8r3fYQ1gwBIAcgQZExSQsIFKNJMB8DAAACLOyVZopDx
         zQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnAdjust.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAX1JREFUOE9joAnYHuz8f7OVERhv87WD01Bp3OByRej/LY6m/7+unvL/z+UNKPj7
+        5ulgOZAaqHJUAJIA2fJz3xwM/PvsWjD+e30dWA1WQ44q8/z/umwiHH+aXofKXjkJjEEGgtRCtUEAyNQt
+        dsb/P06oRuCJNQiMJn4uSBM1TEAmnnGS/f++MeP/h7as/x87s5FwDhiDxEHyIPwqUBfVFSDOSTOR/+8r
+        wv9/qI38/7EpCgO/r44Hy7/NDfx/3VQY04AbdmL/38Wr/P9Q4v7/U60XVgySexMiD1aLYQDIXyAD3qdq
+        /P9YZPL/U6XV/881tmAMYn/I0AbLgwzA8AIo4YDCAKQIrLHF5//XLgRGNuRtlCLYuyA9UO0QADIRFL/f
+        p0X8/zYr6f/zRcVg/GNFIRiDxEHeeJtohBmNIADSDEqyIE2glPh7X8//3wcmgekXq6rB+NncfLAavKkR
+        pACkEJb6QBiUeK40RuLXjAxA/gM5E6QBhEFsDD9TBzAwAABDnLe0Mc/ukgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnDownload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -154,19 +168,7 @@
         yUSKMREa11HdQHUL1U2kWKsSo1I06wBKnLcSZ6zEZikxbaUUYyLeAA1mvQv7pYF1AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnUpload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAVFJREFUOE+1k70vBFEUxV9Fp/OVKFESlRKJKEQiK7YSjVZCQaHT+w80NIS/AJ1K
-        srYRhUloFJKZbLKMzK6EkTjeufdNdt/O+ii4yS/v69xz78y8Mf8SweECgr0R3B1PCpxzzx1/HZWLNdwe
-        TQOv18B76GP3ovMiqHFyP3gQleaA9D4PDd08vFy33RTzJmxThBn1U3/dtBee9foGwf44kpshFfyCqDQD
-        5rh0rZ5c9QCPO0Cy+yMsxhyXbkx40gVUDFBdtSabwPOWUt1WsrmMVmO1OQPp4KkDiAtWuNgentW0mGcg
-        L5AdZMT9NmEQeBlz46h99m5bwJ7VOgXf4GC2kcwK9T7LsBIPKNxnsjVhx8xx6RrSBUWs+jalpPOKrCfU
-        sLV6FrwcYsLnTJeBj40GXAsF0Xx7GymIyktIHvSTciRReUXO2t7C1sh+Jo/mi/N3YcwnX2ULSHLQ8AkA
-        AAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSearchAndUpload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAQpJREFUOE9joDqYOHHSf2Q8Z2L9f6gUfgDT8OrDVxT86et3sDhUGW4A09y+/sL/
